printing the team page success

--- a/team.html
+++ b/team.html
@@ -1,10 +1,31 @@
+<!DOCTYPE html>
+    <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"></link>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"></link>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <meta charset="UTF-8"></meta>
+
+    </head>
+    <body>
+        <div class="jumbotron jumbotron-fluid text-center bg-dark">
+            <div class="container">
+            <h1 class="diplay-4 text-light">Your Team</h1>
+            </div>
+        </div>
+        <div class="container">
+            <div class="col-md-12">
+                <div class="row">
 <div class="card border-info mb-3 text-center" style="max-width: 18rem;">
-      <div class="card-header">Jeff</div>
+      <div class="card-header">ronk</div>
       <div class="card-body">
-        <h5 class="card-title">324</h5>
-        <p class="card-text">Email: email<a href="#"><span class="glyphicon glyphicon-envelope"></span></a></p>
-        <p class="card-text">Github UN: Fluffmeister</p>
-        <p class="card-text">ID: 324</p>
+        <h5 class="card-title">r0i</h5>
+        <p class="card-text">Email: ronk@mail.com<a href="#"><span class="glyphicon glyphicon-envelope"></span></a></p>
+        <p class="card-text">Github UN: ronk</p>
+        <p class="card-text">ID: r0i</p>
       
       </div>
+    </div></div>
     </div>
+</div>
+</body>
+</html>
