--- a/Develop/output/team.html
+++ b/Develop/output/team.html
@@ -16,12 +16,12 @@
             <div class="col-md-12">
                 <div class="row">
 <div class="card border-info mb-3 text-center" style="max-width: 18rem;">
-    <div class="card-header">Cim</div>
+    <div class="card-header">jda</div>
     <div class="card-body">
-      <h5 class="card-title">ID</h5>
-      <p class="card-text">Email: gmail<a href="#"><span class="glyphicon glyphicon-envelope"></span></a></p>
-      <p class="card-text">School: schools</p>
-      <p class="card-text">ID: ID</p>
+      <h5 class="card-title">fajkl</h5>
+      <p class="card-text">Email: fajdskl<a href="#"><span class="glyphicon glyphicon-envelope"></span></a></p>
+      <p class="card-text">School: fjkal</p>
+      <p class="card-text">ID: fajkl</p>
     
     </div>
   </div></div>
