Drying the code

--- a/Develop/output/team.html
+++ b/Develop/output/team.html
@@ -16,13 +16,12 @@
             <div class="col-md-12">
                 <div class="row">
 <div class="card border-info mb-3 text-center" style="max-width: 18rem;">
-    <div class="card-header">jda</div>
+    <div class="card-header">jfkdasl</div>
     <div class="card-body">
-      <h5 class="card-title">fajkl</h5>
-      <p class="card-text">Email: fajdskl<a href="#"><span class="glyphicon glyphicon-envelope"></span></a></p>
-      <p class="card-text">School: fjkal</p>
-      <p class="card-text">ID: fajkl</p>
-    
+      <h5 class="card-title">jfkdal</h5>
+      <p class="card-text">Email: jfkadsl<a href="#"><span class="glyphicon glyphicon-envelope"></span></a></p>
+      <p class="card-text">Office: undefined</p>
+      <p class="card-text">ID: jfkdal</p>
     </div>
   </div></div>
     </div>
