changed const to var and fixed everything

--- a/Develop/output/team.html
+++ b/Develop/output/team.html
@@ -16,12 +16,13 @@
             <div class="col-md-12">
                 <div class="row">
 <div class="card border-info mb-3 text-center" style="max-width: 18rem;">
-    <div class="card-header">jfkdasl</div>
+    <div class="card-header">flip</div>
     <div class="card-body">
-      <h5 class="card-title">jfkdal</h5>
-      <p class="card-text">Email: jfkadsl<a href="#"><span class="glyphicon glyphicon-envelope"></span></a></p>
-      <p class="card-text">Office: undefined</p>
-      <p class="card-text">ID: jfkdal</p>
+      <h5 class="card-title">4</h5>
+      <p class="card-text">Email: 4<a href="#"><span class="glyphicon glyphicon-envelope"></span></a></p>
+      <p class="card-text">School: 4</p>
+      <p class="card-text">ID: 4</p>
+    
     </div>
   </div></div>
     </div>
