Finally injecting html

--- a/Develop/output/team.html
+++ b/Develop/output/team.html
@@ -9,20 +9,28 @@
     <body>
         <div class="jumbotron jumbotron-fluid text-center bg-dark">
             <div class="container">
-            <h1 class="diplay-4 text-light">Your Team</h1>
+            <h1 class="display-4 text-light">Your Team</h1>
             </div>
         </div>
         <div class="container">
             <div class="col-md-12">
                 <div class="row">
 <div class="card border-info mb-3 text-center" style="max-width: 18rem;">
-    <div class="card-header">fda</div>
+      <div class="card-header">work</div>
+      <div class="card-body">
+        <h5 class="card-title">work</h5>
+        <p class="card-text">Email: wokr<a href="#"><span class="glyphicon glyphicon-envelope"></span></a></p>
+        <p class="card-text">Github UN: work</p>
+        <p class="card-text">ID: work</p>
+      
+      </div>
+    </div><div class="card border-info mb-3 text-center" style="max-width: 18rem;">
+    <div class="card-header">pls</div>
     <div class="card-body">
-      <h5 class="card-title">fda</h5>
-      <p class="card-text">Email: fda<a href="#"><span class="glyphicon glyphicon-envelope"></span></a></p>
-      <p class="card-text">School: fda</p>
-      <p class="card-text">ID: fda</p>
-    
+      <h5 class="card-title">pls</h5>
+      <p class="card-text">Email: pls<a href="#"><span class="glyphicon glyphicon-envelope"></span></a></p>
+      <p class="card-text">Office: undefined</p>
+      <p class="card-text">ID: pls</p>
     </div>
   </div></div>
     </div>
