Used "Prettier" to clean up formating

--- a/Develop/output/team.html
+++ b/Develop/output/team.html
@@ -16,23 +16,32 @@
             <div class="col-md-12">
                 <div class="row">
 <div class="card border-info mb-3 text-center" style="max-width: 18rem;">
-      <div class="card-header">work</div>
+    <div class="card-header">Jack Donaghey</div>
+    <div class="card-body">
+      <h5 class="card-title">1000</h5>
+      <p class="card-text">Email: jack@mail.com<a href="#"><span class="glyphicon glyphicon-envelope"></span></a></p>
+      <p class="card-text">Office: undefined</p>
+      <p class="card-text">ID: 1000</p>
+    </div>
+  </div><div class="card border-info mb-3 text-center" style="max-width: 18rem;">
+    <div class="card-header">Kenneth</div>
+    <div class="card-body">
+      <h5 class="card-title">0</h5>
+      <p class="card-text">Email: dothings@mail.com<a href="#"><span class="glyphicon glyphicon-envelope"></span></a></p>
+      <p class="card-text">School: South Alabama Tech</p>
+      <p class="card-text">ID: 0</p>
+    
+    </div>
+  </div><div class="card border-info mb-3 text-center" style="max-width: 18rem;">
+      <div class="card-header">John Samson</div>
       <div class="card-body">
-        <h5 class="card-title">work</h5>
-        <p class="card-text">Email: wokr<a href="#"><span class="glyphicon glyphicon-envelope"></span></a></p>
-        <p class="card-text">Github UN: work</p>
-        <p class="card-text">ID: work</p>
+        <h5 class="card-title">34</h5>
+        <p class="card-text">Email: johns@mail.com<a href="#"><span class="glyphicon glyphicon-envelope"></span></a></p>
+        <p class="card-text">Github UN: Gitstuff</p>
+        <p class="card-text">ID: 34</p>
       
       </div>
-    </div><div class="card border-info mb-3 text-center" style="max-width: 18rem;">
-    <div class="card-header">pls</div>
-    <div class="card-body">
-      <h5 class="card-title">pls</h5>
-      <p class="card-text">Email: pls<a href="#"><span class="glyphicon glyphicon-envelope"></span></a></p>
-      <p class="card-text">Office: undefined</p>
-      <p class="card-text">ID: pls</p>
-    </div>
-  </div></div>
+    </div></div>
     </div>
 </div>
 </body>
